--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,3 +1,10 @@
+// Spacing
+//
+// Control the default styling of most Bootstrap elements by modifying these
+// variables. Mostly focused on spacing.
+// You can add more entries to the $spacers map, should you need more variation.
+$spacer: 0.7rem !default;
+
 // Options
 //
 // Quickly modify global styling by enabling or disabling optional features.
@@ -104,3 +111,6 @@ $card-border-width:        1px;
 $card-border-color:        #e8e8e8;
 $card-cap-bg:              #ffffff;
 $card-bg:                  #fff;
+
+// Forms
+$label-margin-bottom:                   .1rem;
